--- a/.github/workflows/main_estfinanca.yml
+++ b/.github/workflows/main_estfinanca.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09e409c513ab43ae92f17c253252d98b }}/brunoproenca/estfinancas-app:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09e409c513ab43ae92f17c253252d98b }}/estfinancas-app
         file: ./Dockerfile
 
   deploy:
