--- a/.github/workflows/main_estfinanca.yml
+++ b/.github/workflows/main_estfinanca.yml
@@ -23,14 +23,14 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_09e409c513ab43ae92f17c253252d98b }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_358f94e7363447d783f7f9e3f1ddbe8f }}
+        username: ${{ secrets.AzureAppService_ContainerUsername_c5b7742b29c5415a842e668019dd8b5a }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_1f8ebf236e044d2b9e521199a3c238e4 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09e409c513ab43ae92f17c253252d98b }}/estfinancas-app
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c5b7742b29c5415a842e668019dd8b5a }}/brunoproenca/estfinancas-app:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'estfinanca'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_d2af05d62a0b4e47b74007d3c6beeba8 }}
-        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_09e409c513ab43ae92f17c253252d98b }}/brunoproenca/estfinancas-app:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_5b0e50324b974e6ebb22db34636284a2 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_c5b7742b29c5415a842e668019dd8b5a }}/brunoproenca/estfinancas-app:${{ github.sha }}'
