--- a/.github/workflows/main_estensinaapp.yml
+++ b/.github/workflows/main_estensinaapp.yml
@@ -10,69 +10,46 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '18.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # caminho para o projeto da função
+  NODE_VERSION: '18.x' # versão do Node.js a ser usada
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  build-and-deploy:
     steps:
-      - name: 'Checkout GitHub Action'
-        uses: actions/checkout@v4
+      - name: Checkout código
+        uses: actions/checkout@v2
 
-      - name: Setup Node ${{ env.NODE_VERSION }} Environment
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: 'Resolve Project Dependencies Using Npm'
-        shell: bash
+      - name: Instalar Dependências
+        run: npm install
+
+      - name: Compilar e Testar
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
-          npm install
           npm run build --if-present
-          npm run test --if-present
-          popd
+          npm test --if-present
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip artefato para implantação
+        run: zip -r function-app.zip .
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
+      - name: Fazer upload do artefato
+        uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: release.zip
+          name: function-app
+          path: function-app.zip
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+      - name: Login no Azure
+        uses: azure/login@v1
         with:
-          name: node-app
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v2
+      - name: Implantação da Function App
+        uses: azure/functions-action@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F7CA52FC6BC34E52ADFE9BABCAD32474 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5F0459FD42A84969930E6D8F42406122 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2ACBB064828243A380E585E9FDA5AD7D }}
+          app-name: 'nome-da-sua-function-app'
+          package: function-app.zip
 
-      - name: 'Run Azure Functions Action'
-        uses: Azure/functions-action@v1
-        id: fa
-        with:
-          app-name: 'estensinaapp'
-          slot-name: 'Production'
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           
